--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,10 @@ description: A film journal
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
 
+collections:
+  drafts:
+    output: true
+    
 #
 # Flags below are optional
 #
