--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Film Journal
+name: Empire Money Club
 
 # Name of the author
 author: Adam Shepherd
 
 # Short bio or description (displayed in the header)
-description: A film journal
+description: A finance journal
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -52,8 +52,8 @@ google_analytics: # UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://film.adamshepherd.net
-enforce_ssl: https://film.adamshepherd.net
+url: http://finance.adamshepherd.net
+enforce_ssl: https://finance.adamshepherd.net
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
