--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Adam Shepherd
 description: A finance journal
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/notorius-big_crown.png
 
 collections:
   drafts:
